Next btn aligned & Tabs fixes

--- a/src/app/pages/brand/info/info.component.scss
+++ b/src/app/pages/brand/info/info.component.scss
@@ -196,6 +196,7 @@
 .divider-recent-feature .btn{
   height: 54px;
   background-color: $red;
+  text-align: right;
 }
 .recent-feature-article-section {
   .row {
